<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>

   <!-- <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/category_bottom_icon"
        android:title="@string/categories"/>-->
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_bottom_menu"
        android:title="@string/cart"/>

   <!-- <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/store_bottom_icon"
        android:title="@string/deals"/>
-->

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/profile_icon"
        android:title="@string/account"/>

</menu>